<resources>
    <string name="app_name">Profiles</string>
    <string name="login_email_hint">Email или телефон</string>
    <string name="forgot_btn_text">Забыли ?</string>
    <string name="login_btn_text">Войти</string>
    <string name="login_reg_btn_text">Зарегистрироваться</string>
    <string name="password_hint">Пароль</string>
    <string name="error_input_msg">Данные неверны</string>
    <string name="wrong_login_msg">Неправильный логин или пароль</string>
    <string name="email_hint">Email</string>
    <string name="passwd_hint">Пароль</string>
    <string name="passwd_repeat_hint">Повторите пароль</string>
    <string name="reg_approval_text">Регистрация означает согласие с
        <a href="https://profiles.ru/pages/terms">лицензионным соглашением и пользовательским соглашением</a>
    </string>
    <string name="reg_proceed_btn_text">Далее</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="enter_button_text">Войти</string>
    <string name="men_text">Мужчина</string>
    <string name="woman_text">Женщина</string>
    <string name="add_photo_text">добавить фотографию</string>
    <string name="image_chooser_text">Выбрать фотографию</string>
    <string name="search_title">Найти услугу</string>
    <string name="delete_photo">Удалить фотографию</string>
    <string name="search_field_main_text">Найти</string>
    <string name="feed_fragment_title">Лента</string>
    <string name="chat_fragment_title">Сообщения</string>
    <string name="notification_fragment_title">Уведомления</string>
    <string name="profile_fragment_title">Профиль</string>
    <string name="cancel_button_text">Отменить</string>
    <string name="all_button_text">Все</string>
    <string name="goods_button_text">Товары</string>
    <string name="specialists_button_text">Специалисты</string>
    <string name="organizations_button_text">Организации</string>
    <string name="questions_button_text">Вопросы</string>
    <string name="articles_button_text">Статьи</string>
    <string name="posts_button_text">Посты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_confirm_title">Подтвердите, пожалуйста, свой email</string>
    <string name="proceed_to_email_button">Перейти в почту</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non dolor in leo facilisis
        ultrices. Aliquam erat volutpat. Proin ac malesuada ante. Donec in rhoncus erat. Donec ligula erat, bibendum sed
        malesuada id, cursus quis orci. Nam blandit congue sapien in sagittis. Curabitur tincidunt libero felis, a
        pellentesque ante ullamcorper bibendum. Sed ante nulla, egestas non iaculis et, dictum ultrices felis. Nulla nec
        ex diam. Nunc dictum, tortor in rutrum sollicitudin, ante arcu consectetur mi, eleifend finibus magna ipsum sit
        amet lacus. Suspendisse luctus at odio ac varius. Donec a erat condimentum, pretium magna eu, blandit felis.
        Aenean vitae posuere nulla, sed aliquet diam. Vestibulum eget consectetur mi, vitae maximus mauris. Etiam
        efficitur facilisis tempus. Maecenas et aliquam justo. Morbi ornare diam pellentesque, ullamcorper sem in,
        dictum augue. Nam feugiat ullamcorper consequat. Proin gravida odio at nisl iaculis, eu interdum metus
        venenatis. Suspendisse venenatis egestas lectus et bibendum. Donec ut dictum justo. Phasellus id fermentum
        magna, nec sagittis erat. Vivamus vehicula scelerisque orci, nec scelerisque sem euismod sit amet. Vivamus risus
        orci, cursus a ex in, tempus convallis nunc. Mauris massa ipsum, accumsan sed tristique lobortis, tristique quis
        dolor. Aenean eu sapien nisl. Sed ultricies viverra lacus at sollicitudin. Praesent aliquam hendrerit viverra.
        Nunc orci lectus, volutpat id dui id, vehicula rhoncus sapien. Nullam placerat mollis justo, eget lacinia metus
        egestas ut. Maecenas pharetra est eu congue bibendum. Curabitur bibendum nisl eget leo interdum, at imperdiet
        felis mollis. Morbi egestas in diam non elementum. Quisque vitae est non lacus pretium laoreet. Proin gravida mi
        dui, vel placerat lacus iaculis quis. In ultrices eros nulla, eget blandit elit ornare eu. Sed malesuada orci
        leo, quis ultrices ligula egestas at. In hac habitasse platea dictumst. Quisque pretium pulvinar nulla, eget
        eleifend lorem pharetra non. Proin vitae lacinia ante, sed laoreet nulla. Pellentesque enim mauris, condimentum
        sed quam sit amet, aliquet accumsan nulla. Nullam id auctor magna. In mollis elit leo, quis venenatis ligula
        vehicula id. Vestibulum ornare placerat justo, vel mattis massa interdum in. Fusce blandit mauris eget felis
        gravida faucibus. Mauris non accumsan orci. Duis et fermentum libero. Aliquam consectetur, lectus eu elementum
        varius, justo nunc elementum leo, et efficitur turpis arcu id magna. Integer vestibulum fermentum augue, sed
        viverra erat scelerisque sit amet. Aliquam id arcu ac eros pellentesque placerat at pharetra elit. Proin ornare
        sagittis libero eget elementum. Phasellus et nibh ac enim molestie pretium. Nam cursus nisi ac purus dictum
        maximus eu in urna. Proin enim tortor, bibendum ac tortor eget, tincidunt blandit eros. Donec feugiat et dolor
        id finibus. Vestibulum quis molestie nulla. Sed elementum eget metus non aliquam.
    </string>
    <string name="show_all_descr">Показать всё описание</string>
</resources>
