<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/avatar_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:actualImageScaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundAsCircle="true"
        app:roundingBorderColor="@android:color/darker_gray"
        app:roundingBorderWidth="2dp"
        fresco:placeholderImage="@drawable/outline_photo_camera_black_48" />

    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:checkedButton="@+id/men_radio_button"
        android:orientation='horizontal'
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/men_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/men_text" />

        <RadioButton
            android:id="@+id/women_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/woman_text" />
    </RadioGroup>

    <EditText
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/surname_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/surname_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/surname_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/enter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/set_photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_text"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
        app:layout_constraintEnd_toEndOf="@+id/avatar_image"
        app:layout_constraintStart_toStartOf="@+id/avatar_image"
        app:layout_constraintTop_toTopOf="@+id/avatar_image"
        app:layout_constraintVertical_bias="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>