<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ru.profiles.ui.LoginFragment">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:focusable="true"
            android:id="@+id/identityText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/login_email_hint"
            app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
            app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/identityText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/passwordContainer"
            app:layout_constraintBottom_toTopOf="@+id/login_button">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
                android:text="@string/forgot_btn_text"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/forgot_pass_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/passwordText"
                app:layout_constraintBottom_toBottomOf="@+id/passwordText" android:textAllCaps="false"
                android:textAlignment="viewEnd"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/login_btn_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/login_button" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
            app:layout_constraintBottom_toTopOf="@+id/login_reg_button"
            android:textAllCaps="false"/>
    <Button
            android:text="@string/login_reg_btn_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/login_reg_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground" android:textAllCaps="false"
            android:enabled="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>
